# grid-diffusion-sketch

./: CMakeLists.txt  README.md
include/: bench.h  buffer.h  grid.h  operation.h  pairwise.h  timer.h  traversal.h
include/bench/: measure.h  timer.h
include/buffer/: simple_buffer.h
include/operation/: copy.h  exchange_heat.h  fill.h  increment.h  types.h
include/traversal/: linear_pairwise.h
src/: heat.h  main.cpp  operation.h
test/: copy.test.cpp  exchange_heat.test.cpp  fill.test.cpp  simple_buffer.test.cpp  traversals.test.cpp
